--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "shooter-game",
+  "name": "multiplayer-template",
   "version": "0.0.1",
-  "description": "socket.io and three.js shooter game",
+  "description": "realtime multiplayer gaming template for browser",
+  "scripts": {
+    "start": "node server/server.js"
+  },
+  "main": "app.js",
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.5.3"
